# rs_poc

./: CMakeLists.txt  Makefile  README
scripts/: __load__.zeek
scripts/Demo/RustySyslog/: __load__.zeek
src/: Plugin.cc  Plugin.h  syslog.cc  syslog.h
src/parser/: CMakeLists.txt  Cargo.toml  build.rs  parser.h
src/parser/src/: common.rs  lib.rs  parser.rs
tests/: btest.cfg
tests/rustysyslog/: show-plugin.zeek
